# seshat

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  _typos.toml  deny.toml
.github/: dependabot.yml
.github/workflow/: ci.yml
profiles/: baseline.toml
src/: atomic.rs  backup.rs  boot.rs  cli.rs  error.rs  guard.rs  lock.rs  main.rs  modules.rs  orchestrator.rs  output.rs  paths.rs  policy.rs  result.rs  runtime.rs  sysctl.rs  watch.rs
src/boot/: backend.rs  cmdline.rs  deploy.rs  dropin.rs  mainconfig.rs  pending.rs  plan.rs  refresh.rs  restore.rs  verify.rs
src/guard/: install.rs  remove.rs  status.rs  units.rs
src/modules/: allowlist.rs  deploy.rs  dropin.rs  list.rs  names.rs  overlay.rs  pending.rs  plan.rs  restore.rs  runtime_lock.rs  snapshot.rs  verify.rs
src/orchestrator/: deploy.rs  lock.rs  plan.rs  rollback.rs  status.rs  verify.rs
src/sysctl/: deploy.rs  dropin.rs  plan.rs  restore.rs  setting.rs  verify.rs
src/watch/: install.rs  remove.rs  status.rs  units.rs
tests/: smoke_foundation.rs  smoke_guard.rs  smoke_modules.rs  smoke_orchestrators.rs  smoke_pending.rs  smoke_rollback_lock.rs  smoke_watch.rs
